[gd_scene load_steps=21 format=2]

[ext_resource path="res://Cenas/Mapas/4/Cena4.png" type="Texture" id=1]
[ext_resource path="res://Cenas/map_default.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/Mapas/4/Moedor.png" type="Texture" id=3]
[ext_resource path="res://Instanciaveis/Player/Moido.gd" type="Script" id=4]
[ext_resource path="res://Cenas/Mapas/4/Cena4.gd" type="Script" id=5]
[ext_resource path="res://Cenas/Mapas/4/Moedor_animation6.png" type="Texture" id=6]
[ext_resource path="res://Cenas/Mapas/4/Moedor_animation5.png" type="Texture" id=7]
[ext_resource path="res://Cenas/Mapas/4/Moedor_animation4.png" type="Texture" id=8]
[ext_resource path="res://Cenas/Mapas/4/Moedor_animation8.png" type="Texture" id=9]
[ext_resource path="res://Cenas/Mapas/4/Moedor_animation1.png" type="Texture" id=10]
[ext_resource path="res://Cenas/Mapas/4/Moedor_animation7.png" type="Texture" id=11]
[ext_resource path="res://Cenas/Mapas/4/Moedor_animation3.png" type="Texture" id=12]
[ext_resource path="res://Cenas/Mapas/4/Moedor_animation2.png" type="Texture" id=13]
[ext_resource path="res://Cenas/Mapas/4/Moedor_animation9.png" type="Texture" id=14]
[ext_resource path="res://Cenas/Mapas/4/Sprite-0003.png" type="Texture" id=15]
[ext_resource path="res://Cenas/Mapas/4/Sprite-0002.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 24 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 20, 20, 1 )
flag_disable_z = true
direction = Vector3( 0, 40, 0 )
spread = 3.0
gravity = Vector3( 0, 100, 0 )
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 75.0
radial_accel_random = 0.16
scale = 10.0
scale_random = 1.0
color = Color( 0.843137, 0.384314, 0.384314, 1 )
hue_variation = 1.0
hue_variation_random = 0.03

[sub_resource type="Animation" id=4]
resource_name = "Nova Animação"
length = 5.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.5, 2.8, 4.1, 4.4, 4.6, 5, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite2:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.5, 4.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 16 ) ]
}

[node name="Mapa" instance=ExtResource( 2 )]
script = ExtResource( 5 )

[node name="Blade" type="Area2D" parent="." index="0"]
position = Vector2( 128, 200 )
__meta__ = {
"_edit_group_": true
}

[node name="Blade" type="CollisionShape2D" parent="Blade" index="0"]
shape = SubResource( 1 )

[node name="Player" parent="." index="1"]
script = ExtResource( 4 )

[node name="Background" parent="." index="2"]
texture = ExtResource( 1 )
offset = Vector2( 120, 135 )

[node name="Moedor1" type="CollisionPolygon2D" parent="Walls" index="0"]
polygon = PoolVector2Array( 112.669, 165.773, 113.066, 175.893, 64, 176, 64, 0, 80, 0.198425 )

[node name="Moedor2" type="CollisionPolygon2D" parent="Walls" index="1"]
position = Vector2( 104, 0 )
polygon = PoolVector2Array( 72, 136, 30.8927, 166.17, 30.8927, 176.687, 88, 176, 80, 0 )

[node name="Moedor3" type="CollisionPolygon2D" parent="Walls" index="2"]
position = Vector2( 63.2233, 41.0319 )
polygon = PoolVector2Array( 71.9216, 135.965, 49.2687, 159.797, 15.2892, 166.405, 17.4129, 178.675, 80, 176, 80, 136 )

[node name="Sprite" type="AnimatedSprite" parent="." index="5"]
position = Vector2( 122, 205 )
scale = Vector2( 1.22, 1.24074 )
z_index = 25
frames = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="." index="6"]
position = Vector2( 56, 232 )
z_index = 26
process_material = SubResource( 3 )

[node name="Enemies" type="Node2D" parent="." index="7"]

[node name="TL" type="Position2D" parent="Enemies" index="0"]
position = Vector2( 80, -256 )

[node name="BR" type="Position2D" parent="Enemies" index="1"]
position = Vector2( 176, 24 )

[node name="FadeOut" type="Node2D" parent="." index="8"]
z_index = 27

[node name="ColorRect" type="ColorRect" parent="FadeOut" index="0"]
margin_left = -24.0
margin_top = 112.0
margin_right = 256.0
margin_bottom = 296.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="AnimationPlayer" parent="FadeOut" index="1"]
"anims/Nova Animação" = SubResource( 4 )

[node name="Sprite2" type="Sprite" parent="." index="9"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 128, 200 )
z_index = 28
texture = ExtResource( 15 )
[connection signal="body_entered" from="Blade" to="." method="_on_Blade_body_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="animation_finished" from="FadeOut/Fade" to="." method="_on_Fade_animation_finished"]
